-Initial fix for spacing issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -398,7 +398,7 @@
 
 .layoutNavbarSubItems {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   // border: 1px solid black; 
   width: 30vw;
   min-width: 8rem;
